<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather</string>
    <string name="hello_world">Hello world!</string>
    <string name="dialog_token_title">Укажите Токен</string>
    <string name="dialog_token_positive">OK</string>
    <string name="dialog_token_negative">Закрыть</string>
    <string name="dialog_token_warning">(Без токена приложение не работает)</string>

    <!-- TEST VALUES -->
    <string name="t_main_city_name">Moscow</string>
    <string name="t_weather_main">Rain</string>
    <string name="t_weather_description">moderate rain</string>
    <string name="t_weather_temp_small">10 C</string>
    <string name="t_weather_temp_big">12 C</string>

</resources>
