<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@drawable/tiled_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/main_city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/t_main_city_name"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/main_top_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_city_name"
        android:gravity="start|top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/main_weather_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/sunny" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_weather_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_weather_main"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/main_weather_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t_weather_description"
                android:textColor="@android:color/background_light" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/main_weather_temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#66ffffff"
                    android:text="@string/t_weather_temp_small"/>
                <TextView
                    android:id="@+id/main_weather_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:text="@string/t_weather_temp_big"/>
                <TextView
                    android:id="@+id/main_weather_temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#66ffffff"
                    android:text="@string/t_weather_temp_small"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/main_details_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_top_block"
        android:orientation="vertical">
        <TextView
            android:id="@+id/main_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_below="@id/main_details_block">
        <ImageView
            android:id="@+id/main_draw_view"
            android:layout_width="wrap_content"
            android:background="@drawable/weather_bg"
            android:layout_height="100dp" />
    </HorizontalScrollView>


</RelativeLayout>
